Add controller mocked tests, fix controller and service files, add external tests
